# natambio

./: #README.CONFIG#  .gitattributes  .gitignore  AUTHORS  Makefile.am  README  README.CONFIG  README.md  autogen.sh  confdefs.h  configure.ac
debian/: README.Debian  changelog  control  copyright  gen-wrappers.sh  natambio-drc.docs  natambio-drc.install  natambio-ladspa.install  natambio-tools.docs  natambio-tools.install  natambio.docs  natambio.install  not-installed  rules
debian/source/: options
docs/: README.CONFIG  README.md  README_es.md  como_medir_respuestas_impulsivas.md  dbus_for_ffado.txt  how_to_measure_impulse_responses.md  hw_setup_en.md  hw_setup_es.md  install.md
docs/config_samples/: README.md  convol_drc.xml  convol_drc_xtc.xml  convol_drc_xtc_wav.xml  dual_system_nae_loudness_drc_xtc.xml  full_dipoles_no_sub.xml  full_dipoles_sub.xml  multi_out_drc_xtc_bypass.xml  nae_alpha_beta_out.xml  nae_alpha_out.xml  nae_dipole_drc.xml  nae_dipole_drc_xtc.xml  nae_dipole_drc_xtc_chained.xml  nae_dipole_loudness_drc.xml  nae_dipole_loudness_drc_xtc.xml  nae_front_amb_out.xml  nae_xtc_drc_vs_bypass.xml  sub_monitors_convol_dipole.xml  sub_monitors_convol_drc_convol_coeff.xml  sub_monitors_convol_drc_xtc_convol_coeff.xml  sub_monitors_convol_loudness_drc_xtc_convol_coeff.xml  sub_monitors_nae_dipole.xml  sub_monitors_nae_drc_convol_coeff.xml  sub_monitors_nae_drc_xtc_convol_coeff.xml  sub_monitors_nae_loudness_drc_xtc_convol_coeff.xml  xtc_drc_front_amb_in.xml
docs/nae/: nae_en.md  nae_es.md
docs/pca4drc/: pca4drc_en.md  pca4drc_es.md
docs/research_on_stereo/: investigando_sobre_estereo.md
docs/xtc/: xtc_filters_en.md  xtc_filters_es.md
lib/: Makefile.am  binaural_cues.c  binaural_cues.h  dsp.c  dsp.h  loudness.c  loudness.h  xtc.c  xtc.h
natambio_as_a_service/: natambio-jackd.service  natambio.service  natambio_systemd.md  start_jackd_systemd.sh  start_natambio_systemd.sh  wait_jack.sh
src/: Makefile.am  Makefile.simple  README.md  architecture.md  convchannel.cpp  convchannel.hpp  iojack.cpp  iojack.hpp  main.cpp  naconf.cpp  naconf.hpp  nae.cpp  nae.hpp  natambio.cpp  natambio.hpp  panambio.cpp  panambio.hpp  structs.hpp
tools/ladspa_nae_natambio/: Makefile.am  Makefile.simple  README.md  ladspa_nae_natambio.c
tools/python_nae_natambio/: Makefile.am  README.md  README_es.md  nae_natambio.py  requirements.txt
tools/python_pca4drc/: Makefile.am  README.md  README_es.md  check_capture.py  config.drc  fft_convolve.py  full_natambio_measurements_normal.xml  full_natambio_measurements_subwoofer.xml  half_natambio_measurements_normal.xml  half_natambio_measurements_subwoofer.xml  measure_pca4drc.sh  pca4drc.py  raw2wav.py  sweepgen.py  wav2raw.py
tools/python_xtc_filters/: Makefile.am  README.md  README_es.md  requirements.txt  xtc_filters.py
tools/race_filters/: Makefile.am  Makefile.simple  README.md  main.c
tools/testing_XTC/: README.md  test_xtc_ild_itd_sweep.py  test_xtc_ild_itd_sweep_offline.py  test_xtc_sweep.py  test_xtc_sweep_offline.py
tools/testing_XTC/ladspa/: Makefile  README.md  ild_itd_sweep_ladspa.c  xtc_sweep_ladspa.c
tools/xtc_filters/: Makefile.am  Makefile.simple  README.md  main.c
